# primitives

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/viti/primitives/: point.hpp  rectangle.hpp  size.hpp
